fix: index.js alignment improvements

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -182,7 +182,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 }
 
 .n4c--logo {
-  float: left;
+  float: center;
   margin-top: 0;
   padding: 0 ;
 }
